# dual_fr3_mtc_ros2pkg

./: .gitignore  README.md
dual_arm/: CMakeLists.txt  package.xml
dual_arm/config/: dual_fr3.srdf.xacro  dual_fr3.urdf.xacro  dual_fr3_controllers.yaml  dual_kinematics.yaml  dual_ros2_controllers.yaml  dual_ros2_controllers_fake.yaml  fr3.urdf.xacro  joint_limits.yaml  ompl_planning.yaml
dual_arm/launch/: format_moveit.launch.py  moveit_config.py  mtc_moveit.launch.py  run_script.launch.py
dual_arm/rviz/: moveit.rviz
dual_arm/scripts/: fake_gripper_action_server.py
dual_arm/src/: mtc_handover.cpp
scripts/: package.xml  setup.py
scripts/scripts/: arm_mover.py  joint_goal.py  pose_goal.py
